--- a/package.json
+++ b/package.json
@@ -2,21 +2,28 @@
   "name": "web-push-notification",
   "version": "0.0.1",
   "private": true,
-  "dependencies": {
-    "firebase": "^8.3.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "^4.0.3"
+  "description": "Firebase Web Push Notification",
+  "keywords": [
+    "Notification",
+    "Web",
+    "Push"
+  ],
+  "homepage": "https://nishargshah.github.io/web-push-notification",
+  "bugs": {
+    "url": "https://github.com/NishargShah/web-push-notification/issues"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/NishargShah/web-push-notification.git"
+  },
+  "license": "ISC",
+  "author": "Nisharg Shah",
+  "main": "index.js",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
-  },
-  "main": "index.js",
-  "devDependencies": {
-    "gh-pages": "^3.1.0"
   },
   "browserslist": {
     "production": [
@@ -30,22 +37,13 @@
       "last 1 safari version"
     ]
   },
-  "description": "1. Define the firebase config to the `public/firebase-messaging-sw.js` 2. Fill the all credentials in a `src/config.js` 3. You will get the JSON if you are in active stage or in background you will receive the push notification 4. Enjoy",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/NishargShah/web-push-notification.git"
+  "dependencies": {
+    "firebase": "^8.3.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "^4.0.3"
   },
-  "keywords": [
-    "Notification",
-    "Web",
-    "Push",
-    "Notification",
-    "Push",
-    "Notification"
-  ],
-  "author": "Nisharg Shah",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/NishargShah/web-push-notification/issues"
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
